# MKN-Cpp-project-HUFFMAN

./: README.md
hw-02_huffman/: CMakeLists.txt  Makefile
hw-02_huffman/include/: archivator_input_parser.hpp  huffman.hpp  huffman_archive.hpp  huffman_exception.hpp
hw-02_huffman/src/: archivator_input_parser.cpp  huffman.cpp  huffman_archive.cpp  main.cpp
hw-02_huffman/test/: test.cpp
